--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Etch a sketch</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="wider-container">
+        <button>redraw</button>
+        <div class="container"></div>
+    </div>
 </body>
 </html>
